--- a/Solution1/eStore/appsettings.json
+++ b/Solution1/eStore/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FStoreDB": "server=(local);Database=SalesManagementDB;uid=sa;pwd=sa;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "FStoreDB": "server=(local);Database=SalesManagementDB;uid=sa;pwd=1;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "AdminAccount": {
     "Email": "admin@store.com",
